--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+#Custom
+src/classification/modelPickle/*
+!src/classification/modelPickle/*/
+!src/classification/modelPickle/*/*.pickle
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
